--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 {% include "header.html" %}
     <!-- Hero Start -->
-<div class="container-fluid bg-primary py-5 mb-5 hero-header" style="background-image: url('/static/img/background.jpeg'); background-size: cover; background-position: center;">
+<div class="container-fluid bg-primary py-5 mb-5 hero-header" style="background-image: url('/static/img/bg.png'); background-size: cover; background-position: center;">
     <div class="container py-5">
         <div class="row justify-content-start">
             <div class="col-lg-8 text-center text-lg-start">
-                <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5" style="border-color: rgba(256, 256, 256, .3) !important;">DIXIT HEALTH CARE</h5>
+                <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5" style="border-color: rgba(256, 256, 256, .3) !important;"></h5>
                 <h1 class="display-1 text-white mb-md-4">Best Healthcare Solution In Your City</h1>
             </div>
         </div>
@@ -19,7 +19,7 @@
         <div class="row gx-5">
             <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
                 <div class="position-relative h-100">
-                    <img class="position-absolute w-100 h-100 rounded" src="/static/img/herbal_1.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100 rounded" src="/static/img/g1.png" style="object-fit: cover;">
                 </div>
             </div>
             <div class="col-lg-7">
