--- a/templates/blog.html
+++ b/templates/blog.html
@@ -7,26 +7,29 @@
             <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Blog Post</h5>
             <h1 class="display-4">Our Latest Herbal Healthcare Blog Posts</h1>
         </div>
-        <div class="row g-5">
+        <div class="row">
             {% for post in blog_posts %}
-            <div class="col-xl-4 col-lg-6">
-                <div class="bg-light rounded overflow-hidden">
-                    {% if post.image %}
-                    <img class="img-fluid w-100" src="{{ post.image.url }}" alt="">
-                    {% endif %}
-                    <div class="p-4">
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="bg-light rounded overflow-hidden" style="height: 350px;"> <!-- Fixed height for consistent background -->
+                    <div class="p-4" style="flex-grow: 1;"> <!-- Allow the content to grow -->
                         <a class="h3 d-block mb-3" href="">{{ post.title }}</a>
                         <p class="m-0">{{ post.content }}</p>
-                        {% if post.video %}
-                        <div class="mt-3">
-                            <video controls class="w-100">
-                                <source src="{{ post.video.url }}" type="video/mp4">
-                                Your browser does not support the video tag.
-                            </video>
-                        </div>
-                        {% endif %}
                     </div>
+                    {% if post.image %}
+                    <div class="blog-image" style="height: 150px; overflow: hidden;"> <!-- Smaller fixed height for the image -->
+                        <img class="img-fluid" src="{{ post.image.url }}" style="width: 100%; height: 100%; object-fit: cover;" alt="">
+                    </div>
+                    {% endif %}
+                    {% if post.video %}
+                    <div class="mt-3" style="height: 150px; overflow: hidden;"> <!-- Smaller fixed height for the video -->
+                        <video controls class="w-100" style="height: 100%; object-fit: cover;">
+                            <source src="{{ post.video.url }}" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    {% endif %}
                     <div class="d-flex justify-content-between border-top p-4">
+                        <!-- Additional details can be added here if needed -->
                     </div>
                 </div>
             </div>
@@ -36,5 +39,5 @@
 </div>
 
 <!-- Blog End -->
-    
+
 {% include "footer.html" %}
