--- a/templates/footer.html
+++ b/templates/footer.html
@@ -22,10 +22,9 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Popular Links</h4>
                     <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light mb-2" href="{% url "index"%}"><i class="fa fa-angle-right me-2"></i>Home</a>
-                        <a class="text-light mb-2" href="{% url "about"%}"><i class="fa fa-angle-right me-2"></i>About Us</a>
-                        <a class="text-light mb-2" href="{% url "blog"%}"><i class="fa fa-angle-right me-2"></i>Latest Blog</a>
-                        <a class="text-light" href="{% url "contact"%}"><i class="fa fa-angle-right me-2"></i>Contact Us</a>
+                        <a class="text-light mb-2" href="{% url "team"%}"><i class="fa fa-angle-right me-2"></i>Products</a>
+                        <a class="text-light mb-2" href="{% url "healthcare_centre" %}"><i class="fa fa-angle-right me-2"></i>Login</a>
+                        
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
