--- a/templates/information.html
+++ b/templates/information.html
@@ -44,19 +44,14 @@
                 </div>
                 <div class="col-md-6 text-center text-lg-end">
                     <div class="d-inline-flex align-items-center">
-                        <a class="text-body px-2" href="">
+                        <a class="text-body px-2" href="https://www.facebook.com/share/Q5DAEXRMvQ13opeZ/?mibextid=qi20mg">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a class="text-body px-2" href="">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a class="text-body px-2" href="">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                        <a class="text-body px-2" href="">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a class="text-body ps-2" href="">
+                        <a class="text-body px-2" href="https://wa.me/919926284116" target="_blank">
+                            <i class="fab fa-whatsapp"></i>
+                        </a>                        
+        
+                        <a class="text-body ps-2" href="https://www.youtube.com/@dixithealthcare?si=On7H8JiX-2Jr1kxK">
                             <i class="fab fa-youtube"></i>
                         </a>
                     </div>
@@ -68,6 +63,7 @@
 
 
     <!-- Navbar Start -->
+
     <div class="container-fluid sticky-top bg-white shadow-sm">
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0">
@@ -265,5 +261,11 @@ document.getElementById('department').addEventListener('change', function() {
     }
 });
 </script>
+<!-- Required Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
 
 <!-- appointment script end  -->
