--- a/templates/login.html
+++ b/templates/login.html
@@ -1,58 +1,53 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+<head>
     <meta charset="UTF-8">
-    <title>{% block title %}Login{% endblock %}</title>
+    <title>Login</title>
     {% load static %}
-    <link rel="stylesheet" href="/static/css/login.css">
+    <link rel="stylesheet" href="/static/css/login1.css">
     <!-- Fontawesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
+</head>
 <body>
-  <div class="container">
-    <input type="checkbox" id="flip">
-    <div class="cover">
-      <div class="front">
-        <img src="/static/img/herbal_1.jpg" alt="">
-        <div class="text">
-          <span class="text-1">Welcome to  <br> Dixit Health Care</span>
-          <span class="text-2">Let's get connected</span>
-        </div>
-      </div>
-      <div class="back">
-        
-        <div class="text">
-        </div>
-      </div>
-    </div>
-    <div class="forms">
-        <div class="form-content">
-          <div class="login-form">
-            <div class="title">Login to Your Account</div>
-            <form method="post">
-              {% csrf_token %}
-              <div class="input-boxes">
-                <div class="input-box">
-                  <i class="fas fa-user"></i>
-                  <input type="text" id="id_username" name="username" placeholder="Enter your username or email" required>
+    <div class="container">
+        <div class="forms">
+            <div class="form-content">
+                <div class="login-form">
+                    <div class="title">Login to Your Account</div>
+                    
+                    <!-- Display error message when credentials are incorrect -->
+                    {% if messages %}
+                        <div class="alert">
+                            {% for message in messages %}
+                                {% if message.tags == "error" %}
+                                    <p style="color: red;">{{ message }}</p>
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+                    
+                    <form method="post">
+                        {% csrf_token %}
+                        <div class="input-boxes">
+                            <div class="input-box">
+                                <i class="fas fa-user"></i>
+                                <input type="text" id="id_username" name="username" placeholder="Enter your username" required>
+                            </div>
+                            <div class="input-box">
+                                <i class="fas fa-lock"></i>
+                                <input type="password" id="id_password" name="password" placeholder="Enter your password" required>
+                            </div>
+                            <div class="text"><a href="{% url 'reset_password' %}">Forgot password?</a></div>
+                            <div class="button input-box">
+                                <input type="submit" value="Login">
+                            </div>
+                            <div class="text sign-up-text">Don't have an account? <a href="{% url 'healthcare_centre' %}">Sign up here</a></div>
+                        </div>
+                    </form>
                 </div>
-                <div class="input-box">
-                  <i class="fas fa-lock"></i>
-                  <input type="password" id="id_password" name="password" placeholder="Enter your password" required>
-                </div>
-                <div class="text"><a href="#">Forgot password?</a></div>
-                <div class="button input-box">
-                  <input type="submit" value="Login">
-                </div>
-                <div class="text sign-up-text">Don't have an account? <a href="{% url 'healthcare_centre' %}">Sign up here</a></div>
-                <button> <a href="{% url 'index' %}"> Home </a></button>
-              </div>
-            </form>
-          </div>
+            </div>
         </div>
     </div>
-  </div>
 </body>
 </html>
