The Same Commit

--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -22,6 +22,10 @@
         h2 {
             margin-bottom: 20px;
         }
+        .error {
+            color: red; /* Highlight error message in red */
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
@@ -30,6 +34,9 @@
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
+            {% if form.confirm_password.errors %}
+                <div class="error">{{ form.confirm_password.errors|first }}</div>
+            {% endif %}
             <button type="submit" class="btn btn-primary w-100">Change Password</button>
         </form>
     </div>
