--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,7 +5,6 @@
     <title>{% block title %}Sign Up{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" href="/static/css/login1.css">
-    <!-- Fontawesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -13,7 +12,6 @@
   <div class="container">
     <div class="cover">
       <div class="front">
-        {% comment %} <img src="/static/img/herbal_1.jpg" alt=""> {% endcomment %}
         <div class="text">
           <span class="text-1">Welcome to <br> Dixit Health Care</span>
         </div>
@@ -24,6 +22,13 @@
         <div class="form-content">
           <div class="signup-form">
             <div class="title">Create an Account</div>
+            {% if messages %}
+              <div class="alert alert-danger">
+                {% for message in messages %}
+                  <div>{{ message }}</div>
+                {% endfor %}
+              </div>
+            {% endif %}
             <form method="post" id="signupForm">
               {% csrf_token %}
               <div class="input-boxes">
