--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,17 @@
 {% include "header.html" %}
     <!-- Hero Start -->
 
-<div class="container-fluid bg-primary py-5 mb-5 hero-header" style="background-image: url('/static/img/bg.png'); background-size: cover; background-position: center;">
-    <div class="container py-5">
-        <div class="row justify-content-start">
-            <div class="col-lg-8 text-center text-lg-start">
-                <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5" style="border-color: rgba(256, 256, 256, .3) !important;"></h5>
-                <h1 class="display-1 text-white mb-md-4">Best Healthcare Solution In Your City</h1>
+    <div class="container-fluid bg-primary py-5 mb-5 hero-header" style="background-image: url('/static/img/bg.png'); background-size: cover; background-position: center; min-height: 100vh;">
+        <div class="container py-5">
+            <div class="row justify-content-start">
+                <div class="col-lg-8 text-center text-lg-start">
+                    <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5" style="border-color: rgba(255, 255, 255, .3) !important;"></h5>
+                    <h1 class="display-1 text-black mb-md-4">Best Healthcare Solution In Your City</h1>
+                </div>
             </div>
         </div>
     </div>
-</div>
+    
 <!-- Hero End -->
 
 
