--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
 {% include "header.html" %}
     <!-- Hero Start -->
 
-    <div class="container-fluid bg-primary py-5 mb-5 hero-header" style="background-image: url('/static/img/bg.png'); background-size: cover; background-position: center; min-height: 100vh;">
+    <div class="container-fluid bg-primary py-5 mb-5 hero-header" style="background-image: url('/static/img/main.png'); background-size: cover; background-position: center; min-height: 100vh;">
         <div class="container py-5">
             <div class="row justify-content-start">
                 <div class="col-lg-8 text-center text-lg-start">
                     <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5" style="border-color: rgba(255, 255, 255, .3) !important;"></h5>
-                    <h1 class="display-1 text-black mb-md-4">Best Healthcare Solution In Your City</h1>
+                    <h1 class="display-1 text-black mb-md-4"></h1>
                 </div>
             </div>
         </div>
@@ -21,12 +21,12 @@
         <div class="row gx-5">
             <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
                 <div class="position-relative h-100">
-                    <img class="position-absolute w-100 h-100 rounded" src="/static/img/g1.png" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100 rounded" src="/static/img/people_1.jpg" style="object-fit: cover;">
                 </div>
             </div>
             <div class="col-lg-7">
                 <div class="mb-4">
-                    <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">About Us</h5>
+                    <h5 class="d-inline-block text-success text-uppercase border-bottom border-5">About Us</h5>
                     <h1 class="display-4">Your Trusted Partner in Herbal Healthcare</h1>
                 </div>
                 <p>At our herbal healthcare center, we believe in the power of nature to heal and rejuvenate. Our approach combines ancient Ayurvedic wisdom with modern wellness practices to offer comprehensive care for you and your family. Whether you are seeking to enhance your overall well-being or address specific health concerns, our team of qualified herbalists and practitioners are here to guide you. We specialize in personalized treatments, including herbal medicine, detoxification therapies, and lifestyle recommendations, all tailored to your unique needs.</p>
@@ -34,26 +34,110 @@
                 <div class="row g-3 pt-3">
                     <div class="col-sm-3 col-6">
                         <div class="bg-light text-center rounded-circle py-4">
-                            <i class="fa fa-3x fa-leaf text-primary mb-3"></i>
-                            <h6 class="mb-0">Natural<small class="d-block text-primary">Remedies</small></h6>
+                            <div class="bg-success p-3 rounded-circle d-inline-block">
+                                <i class="fa fa-3x fa-leaf text-white mb-3"></i>
+                            </div>
+                            <h6 class="mb-0">Natural<small class="d-block text-success">Remedies</small></h6>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6">
                         <div class="bg-light text-center rounded-circle py-4">
-                            <i class="fa fa-3x fa-heartbeat text-primary mb-3"></i>
-                            <h6 class="mb-0">Holistic<small class="d-block text-primary">Care</small></h6>
+                            <div class="bg-success p-3 rounded-circle d-inline-block">
+                                <i class="fa fa-3x fa-heartbeat text-white mb-3"></i>
+                            </div>
+                            <h6 class="mb-0">Holistic<small class="d-block text-success">Care</small></h6>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6">
                         <div class="bg-light text-center rounded-circle py-4">
-                            <i class="fa fa-3x fa-hand-holding-heart text-primary mb-3"></i>
-                            <h6 class="mb-0">Personalized<small class="d-block text-primary">Consultations</small></h6>
+                            <div class="bg-success p-3 rounded-circle d-inline-block">
+                                <i class="fa fa-3x fa-hand-holding-heart text-white mb-3"></i>
+                            </div>
+                            <h6 class="mb-0">Personalized<small class="d-block text-success">Consultations</small></h6>
                         </div>
                     </div>
                     <div class="col-sm-3 col-6">
                         <div class="bg-light text-center rounded-circle py-4">
-                            <i class="fa fa-3x fa-seedling text-primary mb-3"></i>
-                            <h6 class="mb-0">Sustainable<small class="d-block text-primary">Practices</small></h6>
+                            <div class="bg-success p-3 rounded-circle d-inline-block">
+                                <i class="fa fa-3x fa-seedling text-white mb-3"></i>
+                            </div>
+                            <h6 class="mb-0">Sustainable<small class="d-block text-success">Practices</small></h6>
+                        </div>
+                    </div>                
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="container-fluid py-5">
+    <div class="container">
+        <div class="text-center mx-auto mb-5" style="max-width: 500px;">
+            <h5 class="d-inline-block text-success text-uppercase border-bottom border-5">Doctors</h5>
+            <h1 class="display-4">Best Doctors Teams</h1>
+        </div>
+        <div class="owl-carousel team-carousel position-relative">
+            <div class="team-item">
+                <div class="row g-0 bg-light rounded overflow-hidden">
+                    <div class="col-12 col-sm-5 h-100">
+                        <img class="img-fluid h-100" src="/static/img/doctor1.jpg" style="object-fit: cover;" alt="Doctor Image">
+                    </div>
+                    <div class="col-12 col-sm-7 h-100 d-flex flex-column">
+                        <div class="mt-auto p-4">
+                            <h3>Dr. Vijay Shyam Dixit</h3>
+                            <h6 class="fw-normal fst-italic text-success mb-4">BAMS, BPT</h6>
+                            <p class="m-0">Experience in Gynecological diseases, providing the best treatment for all medical problems.
+                                Experience in chiropractic and Orthopaedics, ensuring top-quality care.</p>
+                        </div>
+                        <div class="d-flex mt-auto border-top p-4">
+                            <a class="btn btn-lg bg-success text-white btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-lg bg-success text-white btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-lg bg-success text-white btn-lg-square rounded-circle" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+             {% comment %} <div class="team-item">
+                <div class="row g-0 bg-light rounded overflow-hidden">
+                    <div class="col-12 col-sm-5 h-100">
+                        <img class="img-fluid h-100" src="/static/img/doctor1.jpg" style="object-fit: cover;" alt="Doctor Image">
+                    </div>
+                    <div class="col-12 col-sm-7 h-100 d-flex flex-column">
+                        <div class="mt-auto p-4">
+                            <h3>Dr. Vijay Shyam Dixit </h3>
+                            <h6 class="fw-normal fst-italic text-primary mb-4">BAMS, BPT</h6>
+                            <p class="m-0"> Experience in Gynecological diseases ,provide you
+                                a best treatment for all medical problems.
+                                Experience in chiropractic and Orthopaedic,
+                                provide you the best treatment for all medical
+                                problems. </p>
+                        </div>
+                        <div class="d-flex mt-auto border-top p-4">
+                            <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div> {% endcomment %}
+            
+            <div class="team-item">
+                <div class="row g-0 bg-light rounded overflow-hidden">
+                    <div class="col-12 col-sm-5 h-100">
+                        <img class="img-fluid h-100" src="/static/img/team-3.jpg" style="object-fit: cover;" alt="Doctor Image">
+                    </div>
+                    <div class="col-12 col-sm-7 h-100 d-flex flex-column">
+                        <div class="mt-auto p-4">
+                            <h3>Dr. POOJA DIXIT</h3>
+                            <h6 class="fw-normal fst-italic text-success mb-4">Gynecologist</h6>
+                            <p class="m-0">Experience in Gynecological diseases, providing the best treatment for all medical problems.</p>
+                        </div>
+                        <div class="d-flex mt-auto border-top p-4">
+                            <a class="btn btn-lg bg-success text-white btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-lg bg-success text-white btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-lg bg-success text-white btn-lg-square rounded-circle" href="#"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
@@ -61,115 +145,97 @@
         </div>
     </div>
 </div>
-<!-- About End -->
 
-    
 
-    <!-- Services Start -->
+
+<!-- Services Start -->
 <div class="container-fluid py-5">
     <div class="container">
         <div class="text-center mx-auto mb-5" style="max-width: 500px;">
-            <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Services</h5>
+            <h5 class="d-inline-block text-success text-uppercase border-bottom border-5">Services</h5>
             <h1 class="display-4">Comprehensive Medical Services</h1>
         </div>
         <div class="row g-5">
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4">
+                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
                         <i class="fa fa-2x fa-user-md text-white"></i>
                     </div>
                     <h4 class="mb-3">Emergency Care</h4>
                     <p class="m-0">Our emergency care services are available 24/7, providing immediate attention and life-saving treatments during critical situations. Our team is equipped with state-of-the-art facilities to handle any medical emergency with precision and care.</p>
-                    <a class="btn btn-lg btn-primary rounded-pill" href="">
-                        <i class="bi bi-arrow-right"></i>
-                    </a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4">
+                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
                         <i class="fa fa-2x fa-procedures text-white"></i>
                     </div>
                     <h4 class="mb-3">Operation & Surgery</h4>
                     <p class="m-0">We offer a wide range of surgical services, from minor procedures to complex operations, all performed by our experienced surgical team. Our focus is on delivering safe, effective, and minimally invasive surgeries for quicker recovery times.</p>
-                    <a class="btn btn-lg btn-primary rounded-pill" href="">
-                        <i class="bi bi-arrow-right"></i>
-                    </a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4">
+                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
                         <i class="fa fa-2x fa-stethoscope text-white"></i>
                     </div>
                     <h4 class="mb-3">Outdoor Checkup</h4>
                     <p class="m-0">Our outdoor checkup services allow you to receive medical consultations and follow-up care in a comfortable and convenient setting. We offer comprehensive health assessments to ensure your well-being is always our top priority.</p>
-                    <a class="btn btn-lg btn-primary rounded-pill" href="">
-                        <i class="bi bi-arrow-right"></i>
-                    </a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4">
+                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
                         <i class="fa fa-2x fa-ambulance text-white"></i>
                     </div>
                     <h4 class="mb-3">Ambulance Service</h4>
                     <p class="m-0">Our fast and reliable ambulance services ensure that you receive prompt medical attention when you need it most. We are equipped with advanced life-support systems to transport patients safely to our healthcare facilities.</p>
-                    <a class="btn btn-lg btn-primary rounded-pill" href="">
-                        <i class="bi bi-arrow-right"></i>
-                    </a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4">
+                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
                         <i class="fa fa-2x fa-pills text-white"></i>
                     </div>
                     <h4 class="mb-3">Medicine & Pharmacy</h4>
                     <p class="m-0">Our on-site pharmacy offers a wide range of prescription medications, over-the-counter drugs, and herbal remedies. We ensure that you have easy access to the medicines you need, along with expert advice from our pharmacists.</p>
-                    <a class="btn btn-lg btn-primary rounded-pill" href="">
-                        <i class="bi bi-arrow-right"></i>
-                    </a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                    <div class="service-icon mb-4">
+                    <div class="service-icon mb-4 bg-success p-3 rounded-circle">
                         <i class="fa fa-2x fa-microscope text-white"></i>
                     </div>
                     <h4 class="mb-3">Blood Testing</h4>
                     <p class="m-0">Our laboratory offers a full range of blood testing services to help diagnose and monitor health conditions. With accurate results and quick turnaround times, we support your ongoing health management with precision.</p>
-                    <a class="btn btn-lg btn-primary rounded-pill" href="">
-                        <i class="bi bi-arrow-right"></i>
-                    </a>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</div>  
 <!-- Services End -->
+<!-- About End -->
 
 
 <!-- Search Start -->
-<div class="container-fluid bg-primary my-5 py-5">
+<div class="container-fluid bg-success my-5 py-5">
     <div class="container py-5">
         <div class="text-center mx-auto mb-5" style="max-width: 500px;">
             <h5 class="d-inline-block text-white text-uppercase border-bottom border-5">Find A Herbal Expert</h5>
-            <h1 class="display-4 mb-4">Discover Trusted Herbal Healthcare Professionals</h1>
+            <h1 class="display-4 mb-4 text-white">Discover Trusted Herbal Healthcare Professionals</h1>
             <h5 class="text-white fw-normal">Embrace the healing power of nature with our curated list of experienced herbal healthcare practitioners. Whether you seek traditional remedies or modern herbal treatments, find the right expert to guide your wellness journey.</h5>
         </div>
         <div class="mx-auto" style="width: 100%; max-width: 600px;">
-            <form method="POST" action="{% url "doctorsearch" %}">
+            <form method="POST" action="{% url 'doctorsearch' %}">
                 {% csrf_token %}
                 <div class="input-group">
-                    <select name="speciality" class="form-select border-primary w-25" style="height: 60px;">
+                    <select name="speciality" class="form-select border-success w-25" style="height: 60px;">
                         <option selected>Select Speciality</option>
                         <option value="Ayurveda">Ayurveda</option>
                         <option value="Herbal Medicine">Herbal Medicine</option>
                         <option value="Naturopathy">Naturopathy</option>
                     </select>
-                    <input type="text" name="city" class="form-control border-primary" placeholder="Search by City" style="width: 25%;">
+                    <input type="text" name="city" class="form-control border-success" placeholder="Search by City" style="width: 25%;">
                     <button class="btn btn-dark border-0" style="width: 25%;">Search</button>
                 </div>
             </form>
@@ -195,11 +261,10 @@
         </div>
     </div>
 </div>
-
 <!-- Search End -->
 
 
-
+{% comment %} "container-fluid py-5" {% endcomment %}
 
 <!-- Reviews Start -->
 <div class="container-fluid py-5">
