--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,57 +1,53 @@
 
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-light mt-5 py-5">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Get In Touch</h4>
-                    <p class="mb-4">Easily connect with your organization</p>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>Bengli Square , Teen Imali , Indore</p>
-                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>herbal_dixit@gmail.com</p>
-                    <p class="mb-0"><i class="fa fa-phone-alt text-primary me-3"></i>+91 986532145</p>
+<!-- Footer Start -->
+<div class="container-fluid bg-success text-light mt-5 py-5">
+    <div class="container py-5">
+        <div class="row g-5">
+            <div class="col-lg-3 col-md-6">
+                <h4 class="d-inline-block text-white text-uppercase border-bottom border-5 border-secondary mb-4">Get In Touch</h4>
+                <p class="mb-4">Easily connect with your organization</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt text-dark me-3"></i>Bengli Square, Teen Imali, Indore</p>
+                <p class="mb-2"><i class="fa fa-envelope text-dark me-3"></i>herbal_dixit@gmail.com</p>
+                <p class="mb-0"><i class="fa fa-phone-alt text-dark me-3"></i>+91 986532145</p>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <h4 class="d-inline-block text-white text-uppercase border-bottom border-5 border-secondary mb-4">Quick Links</h4>
+                <div class="d-flex flex-column justify-content-start">
+                    <a class="text-light mb-2" href="{% url "index"%}"><i class="fa fa-angle-right me-2"></i>Home</a>
+                    <a class="text-light mb-2" href="{% url "about"%}"><i class="fa fa-angle-right me-2"></i>About Us</a>
+                    <a class="text-light mb-2" href="{% url "blog"%}"><i class="fa fa-angle-right me-2"></i>Latest Blog</a>
+                    <a class="text-light" href="{% url "contact"%}"><i class="fa fa-angle-right me-2"></i>Contact Us</a>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Quick Links</h4>
-                    <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light mb-2" href="{% url "index"%}"><i class="fa fa-angle-right me-2"></i>Home</a>
-                        <a class="text-light mb-2" href="{% url "about"%}"><i class="fa fa-angle-right me-2"></i>About Us</a>
-                        <a class="text-light mb-2" href="{% url "blog"%}"><i class="fa fa-angle-right me-2"></i>Latest Blog</a>
-                        <a class="text-light" href="{% url "contact"%}"><i class="fa fa-angle-right me-2"></i>Contact Us</a>
-                    </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <h4 class="d-inline-block text-white text-uppercase border-bottom border-5 border-secondary mb-4">Popular Links</h4>
+                <div class="d-flex flex-column justify-content-start">
+                    <a class="text-light mb-2" href="{% url "team"%}"><i class="fa fa-angle-right me-2"></i>Products</a>
+                    <a class="text-light mb-2" href="{% url "healthcare_centre" %}"><i class="fa fa-angle-right me-2"></i>Login</a>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Popular Links</h4>
-                    <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light mb-2" href="{% url "team"%}"><i class="fa fa-angle-right me-2"></i>Products</a>
-                        <a class="text-light mb-2" href="{% url "healthcare_centre" %}"><i class="fa fa-angle-right me-2"></i>Login</a>
-                        
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Follow us</h4>
-                    <div class="d-flex">
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="https://wa.me/919926284116"><i class="fab fa-whatsapp"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="https://www.facebook.com/share/Q5DAEXRMvQ13opeZ/?mibextid=qi20mg"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="https://www.youtube.com/@dixithealthcare?si=On7H8JiX-2Jr1kxK"><i class="fab fa-youtube"></i></a>
-                    </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <h4 class="d-inline-block text-white text-uppercase border-bottom border-5 border-secondary mb-4">Follow us</h4>
+                <div class="d-flex">
+                    <a class="btn btn-lg btn-dark btn-lg-square rounded-circle me-2" href="https://wa.me/919926284116"><i class="fab fa-whatsapp"></i></a>
+                    <a class="btn btn-lg btn-dark btn-lg-square rounded-circle me-2" href="https://www.facebook.com/share/Q5DAEXRMvQ13opeZ/?mibextid=qi20mg"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-lg btn-dark btn-lg-square rounded-circle" href="https://www.youtube.com/@dixithealthcare?si=On7H8JiX-2Jr1kxK"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid bg-dark text-light border-top border-secondary py-4">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-md-0">&copy; <a class="text-primary" href="#">Your Site Name</a>. DIXIT HEALTH CARE</p>
-                </div>
+</div>
+<div class="container-fluid bg-success text-light border-top border-secondary py-4">
+    <div class="container">
+        <div class="row g-5">
+            <div class="col-md-6 text-center text-md-start">
+                <p class="mb-md-0">&copy; <a class="text-white" href="#">Your Site Name</a>. DIXIT HEALTH CARE</p>
             </div>
         </div>
     </div>
-    <!-- Footer End -->
+</div>
+<!-- Footer End -->
 
-
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 
     <!-- JavaScript Libraries -->
